tests/whiley/valid/test_1904.wyal
define sum_requires_0(int[] xs) is:
    forall(int i):
        ((0 <= i) && (i < |xs|)) ==> (xs[i] >= 0)


assert "precondition not satisfied":
    if:
        true
    then:
        sum_requires_0([0;0])


